[tool.poetry]
name = "zkvvm"
version = "0.1.0"
description = "zkVyper version manager"
authors = ["Edward Amor <edward.amor3@gmail.com>"]
license = "MIT"
readme = "README.rst"

[tool.poetry.dependencies]
python = "^3.8"
vvm = "^0.1.0"
appdirs = "^1.4.4"
tqdm = "^4.64.1"

[tool.poetry.group.lint.dependencies]
black = "^22.10.0"
flake8 = "^5.0.4"
isort = "^5.10.1"
mypy = "^0.982"
types-requests = "^2.28.11.2"

[tool.poetry.group.dev.dependencies]
pre-commit = "^2.20.0"

[tool.poetry.group.test.dependencies]
pytest = "^7.1.3"
pytest-mock = "^3.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
